[package]
name = "rustendence"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["local-offset", "macros", "serde", "serde-well-known"] }
tokio = { version = "1.40.0", features = ["full"] }
